Layout issue

--- a/skin/frontend/codazon_fastest/default/css/styles.css
+++ b/skin/frontend/codazon_fastest/default/css/styles.css
@@ -26898,7 +26898,7 @@ table.cust-reviewss thead {display: none;}
 .nested-container .page-banners .right img {width: 100%; margin-bottom: 0!important;}
 .cdz-best-seller-wrap {    margin-top: 20px;}
 .nested-container .page-banners .right:first-child {margin-bottom: 0; margin-top: 0;}
-.nested-container .page-banners .left + .right {margin-top: 0; margin-bottom: 0;}
+.nested-container .page-banners .left + .right {margin-top: 0; margin-bottom: 8px;}
 .page-banners.clearer img {width: 100%; margin-right: 0;}
 
 
